[gd_scene load_steps=3 format=2]

[ext_resource path="res://scn/btn/selected_bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scn/btn/button.gd" type="Script" id=2]

[node name="Button" type="ColorRect"]
modulate = Color( 1, 1, 1, 0.4 )
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 96, 80 )
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0.12549, 0.12549, 0.180392, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ButtonContainer"]
margin_top = 28.0
margin_right = 96.0
margin_bottom = 28.0
size_flags_horizontal = 3
stretch_mode = 4

[node name="Label" type="Label" parent="ButtonContainer"]
margin_top = 38.0
margin_right = 96.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 1
align = 1
valign = 1

[node name="SelectedBar" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Tween" type="Tween" parent="."]
[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
